--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,14 +1,24 @@
-a:hover{
+a:hover {
     text-decoration: none;
 }
-body{
+
+body {
     margin-top: 56px;
 }
+
 @media (max-width: 767.98px) {
-    body{
+    body {
         margin-top: 103px;
     }
 }
+.btn-primary {
+    background-color: #0079c0;
+}
+.btn-primary:hover{
+    background-color: #3071a9;
+    opacity: 0.8;
+}
+
 /* navbar */
 .bg-custom {
     background-color: #005b8a;
@@ -68,25 +78,52 @@ ul>li>a {
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
 }
 
-li a {
-    color: #005b8a;
-}
-
-.sidebar-ul li .dropdown-btn,
-.dropdown-container .dropdown-item a {
+li a,
+a.dropdown-item {
     color: #005b8a;
     display: block;
 }
 
+.sidebar-ul li .dropdown-btn {
+    color: #005b8a;
+}
+
 li>a:hover,
+.active-link,
+.active-link a,
+.dropdown-item .active-link,
+.dropdown-item:hover,
+.dropdown-item a:hover,
 .sidebar-ul li .dropdown-btn:hover {
     background-color: #005b8a;
     color: white;
     text-decoration: none;
 }
 
-.dropdown-container .dropdown-item>a:hover {
-    text-decoration: none;
+.dropdown-container {
+    display: none;
 }
+
+.active-block {
+    display: block;
+}
+@media (min-width: 768px) {
+    .col-sm-9 .container{
+        margin-left: 210px;
+    }
+}
+@media (min-width: 992px) {
+    .col-sm-9 .container{
+        margin-left: 250px;
+    }
+}
+
+
+
